# project_asio_server

./: CMakeLists.txt  README.md  main.cpp  start.sh  test_websocket.cpp  test_websocket_ssl.cpp  update_game.cpp
json/: log.json  redis_config.json  server.json  update_game.json
log/: glog.h
logic/: account_manager.h  id_generator.cpp  id_generator.h  marquee_manager.cpp  marquee_manager.h  player_session.cpp  player_session.h  player_session_manager.cpp  player_session_manager.h  redis_key.cpp  redis_key.h  role.cpp  role.h  server_config.cpp  server_config.h  server_param.h  server_resource.cpp  server_resource.h  socket_server.cpp  socket_server.h  timer_field.cpp  timer_field.h  timer_manager.cpp  timer_manager.h  util.cpp  util.h
logic/database/: CMakeLists.txt  database.pb.cc  database.pb.h  database.proto
logic/protocol/: CMakeLists.txt  build.sh  protocol_account.pb.cc  protocol_account.pb.h  protocol_account.proto  protocol_error.h  protocol_id.pb.cc  protocol_id.pb.h  protocol_id.proto  protocol_rank.pb.cc  protocol_rank.pb.h  protocol_rank.proto  protocol_shop.pb.cc  protocol_shop.pb.h  protocol_shop.proto  protocol_system.pb.cc  protocol_system.pb.h  protocol_system.proto
logic/servlet/: account_servlet.cpp  account_servlet.h  rank_servlet.cpp  rank_servlet.h  shop_servlet.cpp  shop_servlet.h  system_servlet.cpp  system_servlet.h
net/: buffer.h  connection.cpp  connection.h  https_request.cpp  https_request.h  resource.h  scheduler.cpp  scheduler.h  server.h  server_manager.h  servlet.cpp  servlet.h  session.h  session_manager.h  ssl_certificate.h  ws_connection.cpp  ws_connection.h  wss_connection.cpp  wss_connection.h
redis/: adapter_asio.cpp  adapter_asio.h  redis.h  redis.sync
